--- a/Spectres.csproj
+++ b/Spectres.csproj
@@ -61,6 +61,12 @@
     <Compile Include="FormRazdel1.Designer.cs">
       <DependentUpon>FormRazdel1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRazdel2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRazdel2.Designer.cs">
+      <DependentUpon>FormRazdel2.cs</DependentUpon>
+    </Compile>
     <Compile Include="FunctionPoint.cs" />
     <Compile Include="MathCad.cs" />
     <Compile Include="Program.cs" />
@@ -70,6 +76,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormRazdel1.resx">
       <DependentUpon>FormRazdel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRazdel2.resx">
+      <DependentUpon>FormRazdel2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
